force-app/main/default/objects/VisualAntidote__Field_Integration__c/VisualAntidote__Field_Integration__c.object-meta.xml
<CustomObject>
    <description>This object contains field integration configuration, such as File Upload will have a Field Integration if an integration is selected.</description>
    <label>Field Integration</label>
    <nameField>
        <label>Field Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Integration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>