force-app/main/default/objects/VisualAntidote__Field_Integration__c/fields/VisualAntidote__FieldConfiguration__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__FieldConfiguration__c</fullName>
    <description>This is the JSON that we will save the Fields Configuration which are extra fields that doesn&apos;t need to be track.</description>
    <label>Field Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>