force-app/main/default/objects/VisualAntidote__Field_Integration__c/fields/VisualAntidote__Form__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Form__c</fullName>
    <description>Form id(Previous_Form_Id)</description>
    <label>Form</label>
    <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
    <relationshipLabel>Field Integration</relationshipLabel>
    <relationshipName>Field_Integration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>